# RPC

./: .gitignore  BENCHMARK.md  CMakeLists.txt  config  perf.data  perf.data.old  perf.sh
docs/: Part1-请求旅途.md  Part2-网络层.md  Part3-协议层.md  Part4-调度层.md  Part5-注册发现.md  Part6-压测报告.md  README.md
include/: log_manager.hpp
include/compress_data/: zstd_compress.hpp
include/config/: rpc_client.json  rpc_server.json  servers.json  spdlog_config.json
include/core/: error_code.h  error_code.hpp  rpc_client.hpp  rpc_service.hpp
include/encrypt/: aes_encrypt.hpp
include/load_balance/: load_balancer.hpp
include/load_balancer/: load_balancer.hpp  random.hpp  round.hpp  weighted.hpp  zk_conn_handler.hpp
include/load_config/: registry_config.hpp  rpc_client_config.hpp  rpc_server_config.hpp  thread_pool_config.hpp
include/network/: connection.hpp  connection_manager.hpp  create_socket.hpp  message_cycle.hpp
include/proto/: message.pb.cc  message.pb.h  message.proto  rpc_envelope.pb.cc  rpc_envelope.pb.h  rpc_envelope.proto
include/protocol/: rpc_protocol.hpp
include/registry/: services_registry.hpp
include/serializer/: protobuf_serializer.h
include/service/: service.hpp  service_manager.hpp
include/thread_pool/: thread_pool.hpp  thread_pool_singleton.hpp
src/compress_data/: zstd_compress.cpp
src/core/: rpc_client.cpp
src/encrypt/: aes_encrypt.cpp
src/load_balance/: load_balancer.cpp
src/load_balancer/: load_balancer.cpp  zk_conn_handler.cpp
src/load_config/: registry_config.cpp  rpc_client_config.cpp  rpc_server_config.cpp  thread_pool_config.cpp
src/network/: connection.cpp  connection_manager.cpp  create_socket.cpp  message_cycle.cpp
src/protocol/: rpc_protocol.cpp
src/registry/: services_registry.cpp
src/thread_pool/: thread_pool.cpp  thread_pool_singleton.cpp
test/: aes_encrypt_test.cpp  benchmark.cpp  client_main.cpp  load_balancer_test.cpp  main.cpp  protobuf_serializer_test.cpp  servers_main.cpp  service_manager_test.cpp  services_registry_test.cpp  thread_pool_test.cpp  zk_conn_handler_test.cpp  zstd_compress_test.cpp
